# ChangeLog for media-libs/libcaca
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libcaca/ChangeLog,v 1.5 2004/04/10 02:06:23 lv Exp $

  09 Apr 2004; Travis Tilley <lv@gentoo.org> libcaca-0.9.ebuild:
  added ~amd64 keyword

*libcaca-0.9 (22 Feb 2004)

  28 Feb 2004; Mike Frysinger <vapier@gentoo.org> :
  Fixed DEPEND and add optional X to USE.

  22 Feb 2004; Hanno Boeck <hanno@gentoo.org> libcaca-0.9.ebuild:
  Version bump. Cleaned up ebuild, added imlib and doc use-flag support.

*libcaca-0.6 (17 Jan 2004)

  17 Jan 2004; Martin Holzer <mholzer@gentoo.org> libcaca-0.2.ebuild,
  libcaca-0.6.ebuild:
  Version bumped and License fix.

*libcaca-0.2 (14 Jan 2004)

  14 Jan 2004; Martin Holzer <mholzer@gentoo.org> libcaca-0.2.ebuild:
  Initial Version submitted by Derk-Jan Hartman <thedj@users.sourceforge.net> 
  in 34965
